--- a/DigimonWorldNet6/Frontend.WPF/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/MainWindow.xaml
@@ -29,10 +29,10 @@
 
     </Window.Resources>
 
-    <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0">
-        <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0">
-            <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0">
-                <Border CornerRadius="5" BorderBrush="Black" BorderThickness="2" Padding="0">
+    <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="Black">
+        <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
+            <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background=" #90D9FA">
+                <Border CornerRadius="5" BorderBrush="Black" BorderThickness="2" Padding="0" Background="Black">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
@@ -362,15 +362,62 @@
                             <Rectangle Grid.Row="0" Grid.Column="3" VerticalAlignment="Stretch" Fill="Black" Width="2" />
                         </Grid>
                         <Grid Column="2">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="350" />
-                                <ColumnDefinition Width="50" />
-                                <ColumnDefinition Width="350" />
-                            </Grid.ColumnDefinitions>
 
-                            <Image Grid.Column="0" Grid.Row="0" Width="325" Source="{Binding DigimonType, Converter={StaticResource EnumToImageConverter}}" />
-                            <Image Grid.Column="1" Grid.Row="0" Height="100" Source="/Images/Misc/Arrow-Right.png" />
-                            <Image Grid.Column="2" Grid.Row="0" Width="325" Source="{Binding  EvolutionResult, Mode=OneWay, Converter={StaticResource EnumToImageConverter}}" />
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="175" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="175" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Image Grid.Column="0" Grid.Row="0" Height="150" Source="/Images/Digimon/jijmon.png" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                <Border Grid.Row="0" Grid.Column="1" CornerRadius="5" BorderBrush="Black" BorderThickness="3" Margin="0, 20,25, 20" Padding="0" Background="Black">
+                                    <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
+                                        <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#2E3841">
+                                            <Border CornerRadius="5" BorderBrush="Transparent" BorderThickness="0" Padding="0" Background="#77000000">
+                                                <StackPanel Margin="5">
+                                                    <!-- First Line: Yellow Text -->
+                                                    <TextBlock Text="Jijimon"
+                                                               Foreground="#D4D604"
+                                                               HorizontalAlignment="Left"
+                                                               VerticalAlignment="Top"
+                                                               TextWrapping="Wrap" />
+
+                                                    <!-- Second Line: White Text -->
+                                                    <TextBlock Text="Welcome to Digimon World!"
+                                                               Foreground="#B3B5B1"
+                                                               HorizontalAlignment="Left"
+                                                               VerticalAlignment="Top"
+                                                               TextWrapping="Wrap" />
+                                                </StackPanel>
+                                            </Border>
+                                        </Border>
+                                    </Border>
+                                </Border>
+                            </Grid>
+                            <Grid Grid.Row="1">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="350" />
+                                    <ColumnDefinition Width="50" />
+                                    <ColumnDefinition Width="350" />
+                                </Grid.ColumnDefinitions>
+                                <Border Grid.Column="0" Grid.Row="0" BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="25" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                    <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
+                                        <Image Width="300" Height="300" Source="{Binding DigimonType, Converter={StaticResource EnumToImageConverter}}" Stretch="Uniform" />
+                                    </Border>
+                                </Border>
+
+                                <Image Grid.Column="1" Grid.Row="0" Height="100" Source="/Images/Misc/Arrow-Right.png" HorizontalAlignment="Center" VerticalAlignment="Center" />
+
+                                <Border Grid.Column="2" Grid.Row="0" BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="25"  HorizontalAlignment="Center" VerticalAlignment="Center">
+                                    <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
+                                        <Image Width="300" Height="300" Source="{Binding EvolutionResult, Mode=OneWay, Converter={StaticResource EnumToImageConverter}}" Stretch="Uniform" />
+                                    </Border>
+                                </Border>
+                            </Grid>
                         </Grid>
                     </Grid>
                 </Border>
