--- a/DigimonWorldNet6/Frontend.WPF/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/MainWindow.xaml
@@ -229,7 +229,7 @@
                             </GroupBox>
 
                             <Button Grid.Column="0" Grid.Row="2" Height="40"
-                                    Content="Calculate evolution"
+                                    Content="{Binding CalculateButtonText}"
                                     Command="{Binding SetEvolutionResult}">
                                 <Button.Style>
                                     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource DefaultButtonStyle}">
@@ -364,17 +364,17 @@
                         <Grid Column="2">
 
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="175" />
+                                <RowDefinition Height="*" />
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
 
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="175" />
-                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="600" />
                                 </Grid.ColumnDefinitions>
-                                <Image Grid.Column="0" Grid.Row="0" Height="150" Source="/Images/Digimon/jijmon.png" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                <Border Grid.Row="0" Grid.Column="1" CornerRadius="5" BorderBrush="Black" BorderThickness="3" Margin="0, 20,25, 20" Padding="0" Background="Black">
+                                <Image Grid.Column="0" Grid.Row="0" Height="175" Source="/Images/Digimon/jijimon-narrator-left.png" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10, 15, 10, 15"/>
+                                <Border Grid.Row="0" Grid.Column="1" CornerRadius="5" BorderBrush="Black" BorderThickness="3" Margin="0, 15,25, 10" Padding="0" Background="Black">
                                     <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
                                         <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#2E3841">
                                             <Border CornerRadius="5" BorderBrush="Transparent" BorderThickness="0" Padding="0" Background="#77000000">
@@ -382,16 +382,23 @@
                                                     <!-- First Line: Yellow Text -->
                                                     <TextBlock Text="Jijimon"
                                                                Foreground="#D4D604"
+                                                               FontSize="15"
                                                                HorizontalAlignment="Left"
                                                                VerticalAlignment="Top"
+                                                               Margin="0,0, 0, 5"
+                                                               Width="545"
                                                                TextWrapping="Wrap" />
 
                                                     <!-- Second Line: White Text -->
-                                                    <TextBlock Text="Welcome to Digimon World!"
+                                                    <TextBlock Text="{Binding JijimonText}"
                                                                Foreground="#B3B5B1"
+                                                               FontSize="14"
                                                                HorizontalAlignment="Left"
                                                                VerticalAlignment="Top"
-                                                               TextWrapping="Wrap" />
+                                                               Margin="0, 5"
+                                                               Width="545"
+                                                               TextWrapping="Wrap">
+                                                    </TextBlock>
                                                 </StackPanel>
                                             </Border>
                                         </Border>
@@ -404,7 +411,7 @@
                                     <ColumnDefinition Width="50" />
                                     <ColumnDefinition Width="350" />
                                 </Grid.ColumnDefinitions>
-                                <Border Grid.Column="0" Grid.Row="0" BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="25" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Border Grid.Column="0" Grid.Row="0" BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15" HorizontalAlignment="Center" VerticalAlignment="Bottom">
                                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
                                         <Image Width="300" Height="300" Source="{Binding DigimonType, Converter={StaticResource EnumToImageConverter}}" Stretch="Uniform" />
                                     </Border>
@@ -412,7 +419,7 @@
 
                                 <Image Grid.Column="1" Grid.Row="0" Height="100" Source="/Images/Misc/Arrow-Right.png" HorizontalAlignment="Center" VerticalAlignment="Center" />
 
-                                <Border Grid.Column="2" Grid.Row="0" BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="25"  HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Border Grid.Column="2" Grid.Row="0" BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15" HorizontalAlignment="Center" VerticalAlignment="Bottom">
                                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
                                         <Image Width="300" Height="300" Source="{Binding EvolutionResult, Mode=OneWay, Converter={StaticResource EnumToImageConverter}}" Stretch="Uniform" />
                                     </Border>
