--- a/DigimonWorldNet6/Frontend.WPF/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/MainWindow.xaml
@@ -346,7 +346,6 @@
                                 </Button.Style>
                             </Button>
 
-
                         </Grid>
                         <Grid Column="1">
                             <Grid.ColumnDefinitions>
@@ -373,7 +372,39 @@
                                     <ColumnDefinition Width="175" />
                                     <ColumnDefinition Width="600" />
                                 </Grid.ColumnDefinitions>
-                                <Image Grid.Column="0" Grid.Row="0" Height="175" Source="/Images/Digimon/jijimon-narrator-left.png" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10, 15, 10, 15"/>
+                                <Image Grid.Column="0" Grid.Row="0" Height="175"
+                                       Source="/Images/Digimon/jijimon-narrator-left.png"
+                                       HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10,15,10,15">
+                                    <Image.RenderTransform>
+                                        <ScaleTransform x:Name="ImageScaleTransform" CenterX="0.5" CenterY="0.5" />
+                                    </Image.RenderTransform>
+                                    <Image.RenderTransformOrigin>0.5,0.5</Image.RenderTransformOrigin>
+                                    <Image.Style>
+                                        <Style TargetType="Image">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding FlipToRight}" Value="True">
+                                                    <DataTrigger.EnterActions>
+                                                        <BeginStoryboard>
+                                                            <Storyboard>
+                                                                <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleX)"
+                                                                                 To="-1" Duration="0:0:0.5" />
+                                                            </Storyboard>
+                                                        </BeginStoryboard>
+                                                    </DataTrigger.EnterActions>
+                                                    <DataTrigger.ExitActions>
+                                                        <BeginStoryboard>
+                                                            <Storyboard>
+                                                                <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleX)"
+                                                                                 To="1" Duration="0:0:0.5" />
+                                                            </Storyboard>
+                                                        </BeginStoryboard>
+                                                    </DataTrigger.ExitActions>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Image.Style>
+                                </Image>
+
                                 <Border Grid.Row="0" Grid.Column="1" CornerRadius="5" BorderBrush="Black" BorderThickness="3" Margin="0, 15,25, 10" Padding="0" Background="Black">
                                     <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
                                         <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#2E3841">
