Moved the evolution tool window to a user control. This reduces the complexity of the main window and will most likely make it easier to create a one-page app.

--- a/DigimonWorldNet6/Frontend.WPF/App.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/App.xaml
@@ -1,8 +1,21 @@
 ﻿<Application x:Class="DigimonWorld.Frontend.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:conversion="clr-namespace:DigimonWorld.Frontend.WPF.Conversion"
+             xmlns:enums="clr-namespace:Generics.Enums;assembly=Generics">
     <Application.Resources>
         <FontFamily x:Key="Dw1Font">pack://application:,,,/Frontend.WPF;component/Fonts/DW1_US_Regular.ttf#DW1 US</FontFamily>
+
+        <conversion:EnumToImageConverter x:Key="EnumToImageConverter" />
+
+        <ObjectDataProvider x:Key="DigimonTypes"
+                            MethodName="GetValues" ObjectType="{x:Type enums:DigimonType}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="enums:DigimonType" />
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+
+        <GridLength x:Key="DefaultTextBoxGridRowHeight">30</GridLength>
 
         <Style TargetType="TextBlock">
             <Setter Property="FontFamily" Value="{StaticResource Dw1Font}" />
