Start the app at the center of the screen.

--- a/DigimonWorldNet6/Frontend.WPF/Windows/MainWindow/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/MainWindow/MainWindow.xaml
@@ -14,7 +14,8 @@
         SizeToContent="WidthAndHeight"
         WindowStyle="None"
         AllowsTransparency="True"
-        Background="Transparent">
+        Background="Transparent"
+        WindowStartupLocation="CenterScreen">
 
     <Window.Resources />
 
