--- a/DigimonWorldNet6/Frontend.WPF/Windows/MainWindow/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/MainWindow/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:evolutionTool="clr-namespace:DigimonWorld.Frontend.WPF.UserControls.EvolutionTool"
+        xmlns:flaggedEvolutionPicker="clr-namespace:DigimonWorld.Frontend.WPF.UserControls.FlaggedEvolutionPicker"
         xmlns:local="clr-namespace:DigimonWorld.Frontend.WPF.Windows.MainWindow"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=local:MainWindowViewModel, IsDesignTimeCreatable=True}"
@@ -17,8 +18,6 @@
         Background="Transparent"
         WindowStartupLocation="CenterScreen">
 
-    <Window.Resources />
-
     <Grid Background="Transparent" SnapsToDevicePixels="True" UseLayoutRounding="True">
         <b:Interaction.Triggers>
             <b:EventTrigger EventName="MouseDown">
@@ -29,8 +28,13 @@
             <RowDefinition Height="35" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="60" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-        <Border Background="Transparent" Grid.Row="0" Height="50">
+        <!-- Header Section (Row 0) -->
+        <Border Background="Transparent" Grid.Row="0" Grid.ColumnSpan="2" Height="50">
             <Grid Background="Transparent">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -164,7 +168,11 @@
             </Grid>
         </Border>
 
-        <Border Grid.Row="1" Background="Transparent">
+        <!-- FlaggedEvolutionPickerUserControl in Row 1, Column 0 -->
+        <flaggedEvolutionPicker:FlaggedEvolutionPickerUserControl Grid.Row="1" Grid.Column="0" Margin="0,0,-1,0" VerticalAlignment="Center" />
+
+        <!-- Existing EvolutionToolUserControl in Row 1, Column 1 -->
+        <Border Grid.Row="1" Grid.Column="1" Background="Transparent">
             <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="Black">
                 <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
                     <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#90D9FA">
